src/public/home.css
body{
    padding:0;
    margin:0;
}
#search-div{
    margin:0;
    padding:0;
    height:100%;
    background-color: lightcoral;
}
#search-input{
    width:60%;
    padding:10px;
    margin: 15% 0% 15% 20%;
    border-radius: 5px;
}
#search-btn{
    padding: 10px 50px;
    border-radius:5px;
}
#pokemon-abilities-head, #pokemon-items-head, #pokemon-moves-head{
    margin-left:2%;
}
.ability-container, .items-container, .moves-container{
    border:solid;
    width:25%;
    float:left;
    border-radius:10px;
    margin: 0% 2% 2% 2%;
    padding-left:1%;
    padding-right:1%;

}
.ability-container h3, .items-container h3, .moves-container h3{
    text-align:center;
}
.clear{
    clear:both;
}
#stats-div{
    width:75%;
    margin-left:28%;
}
#stat-left{
    width:50%;
    float:left;
}
#stat-right{
    width: 50%;
    float:left;
}
#pokemon-name{
    text-align: center;
}
#move-head-div-left{
    margin-left:2%;
    width:5%;
    float:left;
}
#move-head-div-right{
    margin-top:1.2%;
    width:70%;
    float:left;
}
#move-search-input{
    border-radius:5px;
    padding:5px;
}
#move-search-btn, #show-all-moves-btn{
    border-radius:5px;
    padding: 5px 25px;
}

